[package]
name = "allocations"
version = "0.1.0"
edition = "2021"
description = "Thin cross-platform functions for memory allocation, deallocation and reallocation"
license = "GPL-3.0-only"
repository = "https://github.com/Nereuxofficial/benemalloc"
documentation = "https://docs.rs/allocations"


[dependencies]
libc = "0.2.155"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_System", "Win32_System_SystemInformation", "Win32_System_Memory_NonVolatile"] }