[package]
name = "benemalloc"
version = "0.1.0"
edition = "2021"
description = "WIP: A fast, general-purpose memory allocator for Rust"
license = "GPL-3"
repository = "https://github.com/Nereuxofficial/benemalloc"
documentation = "https://docs.rs/benemalloc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocations ={ path = "../allocations"}

[features]
default = []
track_allocations = []