[package]
name = "benemalloc"
version = "0.1.1-BETA"
edition = "2021"
description = "WIP: A fast, general-purpose memory allocator for Rust"
license = "GPL-3.0-only"
repository = "https://github.com/Nereuxofficial/benemalloc"
documentation = "https://docs.rs/benemalloc"
readme = "Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocations = { path = "../allocations", version = "0.1.0-BETA" }
serde_json = { version = "1.0.128", optional = true }
libc = { version = "0.2.109", optional = true }
serde = { version = "1.0.203", optional = true, features = ["derive"] }

[features]
default = []
track_allocations = ["serde_json", "libc", "serde"]
debug = []
