[package]
name = "benemalloc-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benemalloc = { path = "../benemalloc" }
rand = "0.8"

[features]
default = []
track_allocations = ["benemalloc/track_allocations"]